--- a/public/index.css
+++ b/public/index.css
@@ -371,3 +371,58 @@ Remove or comment-out the code block below to see how the browser will fall-back
         margin: 0;
     }
 }
+
+
+.window-overlay{
+    align-items: flex-start;
+    background-color: rgba(0,0,0,.64);
+    height: 100%;
+    justify-content: center;
+    left: 0;
+    overflow-y: auto;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 20
+}
+
+.window{
+    background-color: #f5f6f7;
+    border-radius: 2px;
+    margin: 150px 380px 80px;
+    overflow: hidden;
+    position: relative;
+    width: 768px;
+    z-index: 25;
+}
+
+.focus-dummy {
+    width: 1px;
+    height: 400px;
+    display: block;
+    overflow: hidden;
+    outline: none;
+}
+
+.new-comment {
+    position: relative;
+    margin: 0 0 20px 40px;
+}
+
+.member {
+    background-color: #dfe3e6;
+    border-radius: 25em;
+    color: #17394d;
+    cursor: pointer;
+    display: block;
+    float: left;
+    height: 32px;
+    margin: 0 4px 4px 0;
+    overflow: visible;
+    position: relative;
+    width: 32px;
+    text-decoration: none;
+    user-select: none;
+    z-index: 0;
+}
+
